add DELETE and cors middleware
